<resources>
    <string name="app_name">Web GIS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_map">Map</string>
    <string name="menu_monitor">Monitor</string>
    <string name="menu_other">Other</string>
    <string name="dashboard_geometry">Geometry</string>
    <string name="dashboard_table">Table</string>
    <string name="monitor_tankos">Tankos</string>
    <string name="monitor_patok">Patok HGU</string>
    <string name="monitor_pupuk">Pupuk</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">Logo</string>
    <!-- Strings used for fragments for navigation -->
</resources>