<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="20dp"
    android:paddingBottom="10dp"
    tools:context=".activity.ui.Dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/dashboard_switch">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/top_nav_background">

            <TextView
                android:id="@+id/text_dashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/menu_dashboard"
                android:textAlignment="center"
                android:textSize="20sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dashboardInfoTextTop"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="Luas HGU"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dashboardInfoTextBottom"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="1000 ha"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dashboardInfoTextTop"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="Luas Tanam"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dashboardInfoTextBottom"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="1000 ha"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/child_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/dashboard_switch"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/buttonGeometry"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="50"
            android:background="@drawable/button_background_left"
            android:text="@string/dashboard_geometry" />

        <Button
            android:id="@+id/buttonTable"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="50"
            android:background="@drawable/button_background_right"
            android:text="@string/dashboard_table" />
    </LinearLayout>

</RelativeLayout>